Update docs and clean up
